; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_sh2_dynarec.c_ll_add.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_sh2_dynarec.c_ll_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ll_entry = type { i32, %struct.ll_entry*, i8*, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ll_add(%struct.ll_entry** %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.ll_entry**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.ll_entry*, align 8
  store %struct.ll_entry** %0, %struct.ll_entry*** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = call %struct.ll_entry* @malloc(i32 32)
  store %struct.ll_entry* %8, %struct.ll_entry** %7, align 8
  %9 = load %struct.ll_entry*, %struct.ll_entry** %7, align 8
  %10 = icmp ne %struct.ll_entry* %9, null
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = load i32, i32* %5, align 4
  %14 = load %struct.ll_entry*, %struct.ll_entry** %7, align 8
  %15 = getelementptr inbounds %struct.ll_entry, %struct.ll_entry* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 8
  %16 = load %struct.ll_entry*, %struct.ll_entry** %7, align 8
  %17 = getelementptr inbounds %struct.ll_entry, %struct.ll_entry* %16, i32 0, i32 3
  store i64 0, i64* %17, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = load %struct.ll_entry*, %struct.ll_entry** %7, align 8
  %20 = getelementptr inbounds %struct.ll_entry, %struct.ll_entry* %19, i32 0, i32 2
  store i8* %18, i8** %20, align 8
  %21 = load %struct.ll_entry**, %struct.ll_entry*** %4, align 8
  %22 = load %struct.ll_entry*, %struct.ll_entry** %21, align 8
  %23 = load %struct.ll_entry*, %struct.ll_entry** %7, align 8
  %24 = getelementptr inbounds %struct.ll_entry, %struct.ll_entry* %23, i32 0, i32 1
  store %struct.ll_entry* %22, %struct.ll_entry** %24, align 8
  %25 = load %struct.ll_entry*, %struct.ll_entry** %7, align 8
  %26 = load %struct.ll_entry**, %struct.ll_entry*** %4, align 8
  store %struct.ll_entry* %25, %struct.ll_entry** %26, align 8
  ret void
}

declare dso_local %struct.ll_entry* @malloc(i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
